--- a/Bot_Funcional_v3.ipynb
+++ b/Bot_Funcional_v3.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOLyenphR2HlKjMgkyMMMBh",
+      "authorship_tag": "ABX9TyNnOfNa5P6cMLLZFslIVduU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -500,6 +500,7 @@
         "\n",
         "def evaluate_past_predictions(results_file=\"/content/prediction_log.csv\", lookahead_candles=5):\n",
         "    import yfinance as yf\n",
+        "    import matplotlib.pyplot as plt\n",
         "    from datetime import timedelta\n",
         "\n",
         "    if not os.path.exists(results_file):\n",
@@ -561,8 +562,27 @@
         "            continue\n",
         "\n",
         "    df_eval = pd.DataFrame(evaluation)\n",
+        "\n",
+        "    # 📊 Resumo de acertos e erros\n",
+        "    resumo = df_eval.groupby([\"Ativo\", \"Timeframe\", \"Resultado\"]).size().unstack(fill_value=0)\n",
+        "    resumo[\"Total\"] = resumo.sum(axis=1)\n",
+        "    resumo[\"Acurácia (%)\"] = (resumo.get(\"Acertou\", 0) / resumo[\"Total\"] * 100).round(2)\n",
+        "    display(resumo)\n",
+        "\n",
+        "    # 📈 Gráfico de barras\n",
+        "    resumo_plot = resumo[[\"Acertou\", \"Errou\"]] if \"Errou\" in resumo.columns else resumo[[\"Acertou\"]]\n",
+        "    resumo_plot.plot(kind=\"bar\", figsize=(10, 5), title=\"📊 Acertos vs Erros por Ativo e Timeframe\")\n",
+        "    plt.ylabel(\"Quantidade de Sinais\")\n",
+        "    plt.xticks(rotation=45)\n",
+        "    plt.grid(axis=\"y\")\n",
+        "    plt.tight_layout()\n",
+        "    plt.show()\n",
+        "\n",
+        "    # 📄 Tabela completa das previsões\n",
         "    display(df_eval)\n",
+        "\n",
         "    return df_eval\n",
+        "\n",
         "\n",
         "def clear_models(model_dir=\"/content/models\"):\n",
         "    import shutil\n",
@@ -799,34 +819,22 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 314
+          "base_uri": "https://localhost:8080/"
         },
         "id": "LnV2_pGz7tDp",
-        "outputId": "941c8abe-17d8-4d79-8940-0c8217ef4671"
+        "outputId": "a11ec6d7-82ae-4710-e76c-b895661cc77d"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "\n",
-            "⏰ Verificando timeframes - 2025-03-31 16:51:35\n",
+            "⏰ Verificando timeframes - 2025-03-31 17:21:32\n",
             "⏳ Ainda não é hora para 15m...\n",
             "⏳ Ainda não é hora para 1h...\n",
             "⏳ Ainda não é hora para 1d...\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "KeyboardInterrupt",
-          "evalue": "",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-7-5aee516a3626>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m    619\u001b[0m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"⏳ Ainda não é hora para {interval}...\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    620\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 621\u001b[0;31m     \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m60\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# Espera 1 minuto antes de verificar de novo\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    622\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    623\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
           ]
         }
       ]
