--- a/Bot_Funcional_v2.0.ipynb
+++ b/Bot_Funcional_v2.0.ipynb
@@ -177,49 +177,44 @@
         "    return None\n",
         "\n",
         "# --- LSTM ---\n",
-        "def save_lstm_model(model, asset, interval):\n",
-        "    path = get_model_path(asset, interval, model_type=\"lstm\")\n",
+        "def save_lstm_model(model, filename):\n",
+        "    \"\"\"\n",
+        "    Salva o modelo LSTM em formato moderno (.keras).\n",
+        "    \"\"\"\n",
+        "    import os\n",
+        "    from keras.models import save_model\n",
         "\n",
-        "    # Garante que a extensão seja .keras\n",
-        "    if not path.endswith(\".keras\"):\n",
-        "        path = path.replace(\".h5\", \".keras\").replace(\".joblib\", \".keras\")\n",
+        "    # Garante extensão .keras\n",
+        "    if not filename.endswith('.keras'):\n",
+        "        filename = filename.replace('.h5', '.keras').replace('.hdf5', '.keras')\n",
+        "    os.makedirs(os.path.dirname(filename), exist_ok=True)\n",
         "\n",
-        "    model.save(path)\n",
-        "    print(f\"💾 Modelo LSTM salvo em: {path}\")\n",
+        "    try:\n",
+        "        save_model(model, filename)\n",
+        "        print(f\"💾 Modelo LSTM salvo em: {filename}\")\n",
+        "    except Exception as e:\n",
+        "        print(f\"❌ Erro ao salvar o modelo LSTM: {e}\")\n",
         "\n",
         "\n",
         "\n",
         "\n",
-        "def load_lstm_model(asset, interval, data=None, window_size=20):\n",
-        "    path = get_model_path(asset, interval, model_type=\"lstm\")\n",
-        "    if os.path.exists(path):\n",
-        "        print(f\"📂 Modelo LSTM encontrado em: {path}\")\n",
-        "        try:\n",
-        "            model = load_model(path, compile=False)\n",
-        "            model.compile(optimizer=\"adam\", loss=\"mse\")\n",
         "\n",
-        "            print(f\"✅ Modelo LSTM carregado com sucesso para {asset} ({interval})\")\n",
-        "        except Exception as e:\n",
-        "            print(f\"❌ Falha ao carregar modelo LSTM: {e}\")\n",
-        "            return None\n",
         "\n",
-        "        model.window_size = window_size\n",
+        "def load_lstm_model(filename):\n",
+        "    \"\"\"\n",
+        "    Carrega modelo LSTM no formato moderno (.keras) e recompila com 'mse'.\n",
+        "    \"\"\"\n",
+        "    from keras.models import load_model\n",
         "\n",
-        "        if data is not None:\n",
-        "            try:\n",
-        "                _, _, scaler = prepare_lstm_data(data, window_size=window_size)\n",
-        "                model.scaler = scaler\n",
-        "            except Exception as e:\n",
-        "                print(f\"⚠️ Erro ao aplicar scaler ao LSTM carregado: {e}\")\n",
-        "                model.scaler = None\n",
-        "        else:\n",
-        "            print(\"⚠️ Atenção: LSTM carregado sem dados para gerar o scaler!\")\n",
-        "            model.scaler = None\n",
-        "\n",
+        "    try:\n",
+        "        model = load_model(filename, compile=False)  # evita erro com 'mse'\n",
+        "        model.compile(optimizer='adam', loss='mse')  # recompila manualmente\n",
+        "        print(f\"📂 Modelo LSTM carregado de: {filename}\")\n",
         "        return model\n",
-        "    else:\n",
-        "        print(f\"🚫 Modelo LSTM NÃO encontrado em: {path}\")\n",
+        "    except Exception as e:\n",
+        "        print(f\"❌ Falha ao carregar modelo LSTM: {e}\")\n",
         "        return None\n",
+        "\n",
         "\n",
         "\n",
         "\n",
@@ -559,49 +554,51 @@
         "    return model\n",
         "\n",
         "\n",
-        "\n",
-        "\n",
-        "\n",
-        "def predict_with_lstm(model, data):\n",
+        "def predict_with_lstm(df, model, lookback):\n",
         "    \"\"\"\n",
-        "    Faz a previsão dos próximos HIGHs e LOWs usando um modelo LSTM já treinado.\n",
-        "    Usa 'Close' e 'XGB_PRED' como features — que devem estar no DataFrame.\n",
+        "    Realiza a previsão com o modelo LSTM usando as features + XGB_PRED como entrada.\n",
+        "    Retorna o DataFrame com colunas LSTM_PRED_HIGH e LSTM_PRED_LOW.\n",
         "    \"\"\"\n",
-        "    df = data.copy().reset_index(drop=True)\n",
-        "    feature_cols = [\"Close\", \"XGB_PRED\"]\n",
+        "    import numpy as np\n",
         "\n",
-        "    # ✅ Validações obrigatórias\n",
-        "    if not hasattr(model, \"scaler\") or model.scaler is None:\n",
-        "        raise ValueError(\"❌ LSTM carregado sem scaler.\")\n",
+        "    # ⛔️ Verifica se XGB_PRED existe e tem valores válidos\n",
+        "    if 'XGB_PRED' not in df.columns or df['XGB_PRED'].isnull().all():\n",
+        "        print(\"⚠️ Coluna 'XGB_PRED' ausente ou vazia — não é possível prever com LSTM ainda.\")\n",
+        "        return df\n",
         "\n",
-        "    if not hasattr(model, \"window_size\") or model.window_size is None:\n",
-        "        raise ValueError(\"❌ LSTM carregado sem window_size.\")\n",
+        "    features = ['RSI', 'MACD', 'MACD_Signal', 'SMA_50', 'SMA_200', 'Bollinger_Upper', 'Bollinger_Lower',\n",
+        "                'ADX', 'Stoch_K', 'Stoch_D', 'ATR', 'ROC', 'OBV', 'CCI', 'Tenkan_Sen', 'Kijun_Sen',\n",
+        "                'VWAP', 'Doji', 'Engulfing', 'Hammer', 'XGB_PRED']\n",
         "\n",
-        "    if not all(col in df.columns for col in feature_cols):\n",
-        "        raise ValueError(\"❌ DataFrame não possui as colunas necessárias: 'Close' e 'XGB_PRED'.\")\n",
+        "    # Remove qualquer linha com NaN nas features\n",
+        "    df = df.dropna(subset=features)\n",
+        "    if len(df) <= lookback:\n",
+        "        print(\"⚠️ Dados insuficientes para LSTM — retornando df sem previsão.\")\n",
+        "        return df\n",
         "\n",
-        "    # 🔍 Remove dados nulos\n",
-        "    df = df.dropna(subset=feature_cols)\n",
-        "    if len(df) < model.window_size:\n",
-        "        raise ValueError(f\"❌ Dados insuficientes para LSTM. Linhas disponíveis: {len(df)}\")\n",
+        "    # Normalização das features\n",
+        "    from sklearn.preprocessing import MinMaxScaler\n",
+        "    scaler = MinMaxScaler()\n",
+        "    df_scaled = scaler.fit_transform(df[features])\n",
         "\n",
-        "    # 🔢 Normaliza as features\n",
-        "    try:\n",
-        "        scaled = model.scaler.transform(df[feature_cols])\n",
-        "    except Exception as e:\n",
-        "        raise ValueError(f\"❌ Falha ao normalizar dados com scaler: {e}\")\n",
+        "    # Criação da sequência de entrada para o LSTM\n",
+        "    X_lstm = []\n",
+        "    for i in range(lookback, len(df_scaled)):\n",
+        "        X_lstm.append(df_scaled[i-lookback:i])\n",
+        "    X_lstm = np.array(X_lstm)\n",
         "\n",
-        "    # 📈 Monta a sequência de entrada\n",
-        "    last_sequence = scaled[-model.window_size:]\n",
-        "    X_pred = np.reshape(last_sequence, (1, model.window_size, len(feature_cols)))\n",
+        "    # Realiza a previsão\n",
+        "    y_pred = model.predict(X_lstm)\n",
         "\n",
-        "    # 🔮 Faz a previsão\n",
-        "    try:\n",
-        "        predicted_highs, predicted_lows = model.predict(X_pred, verbose=0)\n",
-        "        return predicted_highs[0], predicted_lows[0]\n",
-        "    except Exception as e:\n",
-        "        raise ValueError(f\"❌ Erro ao prever com LSTM: {e}\")\n",
+        "    # Verifica o shape da previsão\n",
+        "    if y_pred.shape[1] == 2:\n",
+        "        df = df.iloc[lookback:].copy()\n",
+        "        df['LSTM_PRED_HIGH'] = y_pred[:, 0]\n",
+        "        df['LSTM_PRED_LOW'] = y_pred[:, 1]\n",
+        "    else:\n",
+        "        print(f\"❌ Shape inesperado na previsão do LSTM: {y_pred.shape}\")\n",
         "\n",
+        "    return df\n",
         "\n",
         "\n",
         "\n",
@@ -1798,6 +1795,35 @@
     {
       "cell_type": "code",
       "source": [
+        "import glob\n",
+        "import os\n",
+        "\n",
+        "# Remove modelos antigos em .h5 para evitar carregamento errado\n",
+        "for file in glob.glob(\"/content/models/*.h5\"):\n",
+        "    print(f\"🗑️ Removendo modelo antigo: {file}\")\n",
+        "    os.remove(file)\n"
+      ],
+      "metadata": {
+        "id": "ux4S4dotjLHp",
+        "outputId": "297ad92e-31d8-431a-d6f7-54e7299c5309",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 70,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "🗑️ Removendo modelo antigo: /content/models/lstm_model_BTCUSD_15m.h5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "plot_prediction_performance(\"/content/prediction_log.csv\")\n"
       ],
       "metadata": {
@@ -2015,12 +2041,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 1000
         },
         "id": "mNs9WU77_fGw",
-        "outputId": "4a3cd12e-1957-4055-c812-aca01ac4f69d"
+        "outputId": "cfed20bb-b781-41d0-958a-bb3fb207a81f"
       },
-      "execution_count": null,
+      "execution_count": 69,
       "outputs": [
         {
           "output_type": "stream",
@@ -4321,6 +4348,7 @@
             "⚠️ Erro ao prever LSTM_PRED na linha 2291: ❌ Coluna 'XGB_PRED' ausente no dataframe.\n",
             "⚠️ Erro ao prever LSTM_PRED na linha 2292: ❌ Coluna 'XGB_PRED' ausente no dataframe.\n",
             "⚠️ Erro ao prever LSTM_PRED na linha 2293: ❌ Coluna 'XGB_PRED' ausente no dataframe.\n",
+            "⚠️ Erro ao prever LSTM_PRED na linha 2294: ❌ Coluna 'XGB_PRED' ausente no dataframe.\n",
             "⚠️ LSTM_PRED indisponível ou com poucos dados — ignorando do modelo.\n",
             "🧪 features: ['RSI', 'MACD', 'MACD_Signal', 'SMA_50', 'SMA_200', 'Bollinger_Upper', 'Bollinger_Lower', 'ADX', 'Stoch_K', 'Stoch_D', 'ATR', 'ROC', 'OBV', 'CCI', 'Tenkan_Sen', 'Kijun_Sen', 'VWAP', 'Doji', 'Engulfing', 'Hammer']\n",
             "📄 df.columns: ['Close', 'High', 'Low', 'Open', 'Volume', 'RSI', 'SMA_50', 'SMA_200', 'MACD', 'MACD_Signal', 'Bollinger_Upper', 'Bollinger_Lower', 'ADX', 'Stoch_K', 'Stoch_D', 'ATR', 'ROC', 'OBV', 'CCI', 'Tenkan_Sen', 'Kijun_Sen', 'VWAP', 'Doji', 'Engulfing', 'Hammer', 'LSTM_PRED', 'Future_Close', 'Future_Return', 'Signal']\n"
@@ -4330,27 +4358,23 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "/usr/local/lib/python3.11/dist-packages/xgboost/core.py:158: UserWarning: [19:56:10] WARNING: /workspace/src/learner.cc:740: \n",
+            "/usr/local/lib/python3.11/dist-packages/xgboost/core.py:158: UserWarning: [20:11:00] WARNING: /workspace/src/learner.cc:740: \n",
             "Parameters: { \"use_label_encoder\" } are not used.\n",
             "\n",
             "  warnings.warn(smsg, UserWarning)\n",
-            "/usr/local/lib/python3.11/dist-packages/xgboost/core.py:158: UserWarning: [19:56:11] WARNING: /workspace/src/learner.cc:740: \n",
+            "/usr/local/lib/python3.11/dist-packages/xgboost/core.py:158: UserWarning: [20:11:00] WARNING: /workspace/src/learner.cc:740: \n",
             "Parameters: { \"use_label_encoder\" } are not used.\n",
             "\n",
             "  warnings.warn(smsg, UserWarning)\n",
-            "/usr/local/lib/python3.11/dist-packages/xgboost/core.py:158: UserWarning: [19:56:11] WARNING: /workspace/src/learner.cc:740: \n",
+            "/usr/local/lib/python3.11/dist-packages/xgboost/core.py:158: UserWarning: [20:11:00] WARNING: /workspace/src/learner.cc:740: \n",
             "Parameters: { \"use_label_encoder\" } are not used.\n",
             "\n",
             "  warnings.warn(smsg, UserWarning)\n",
-            "/usr/local/lib/python3.11/dist-packages/xgboost/core.py:158: UserWarning: [19:56:11] WARNING: /workspace/src/learner.cc:740: \n",
+            "/usr/local/lib/python3.11/dist-packages/xgboost/core.py:158: UserWarning: [20:11:00] WARNING: /workspace/src/learner.cc:740: \n",
             "Parameters: { \"use_label_encoder\" } are not used.\n",
             "\n",
             "  warnings.warn(smsg, UserWarning)\n",
-            "/usr/local/lib/python3.11/dist-packages/xgboost/core.py:158: UserWarning: [19:56:11] WARNING: /workspace/src/learner.cc:740: \n",
-            "Parameters: { \"use_label_encoder\" } are not used.\n",
-            "\n",
-            "  warnings.warn(smsg, UserWarning)\n",
-            "/usr/local/lib/python3.11/dist-packages/xgboost/core.py:158: UserWarning: [19:56:12] WARNING: /workspace/src/learner.cc:740: \n",
+            "/usr/local/lib/python3.11/dist-packages/xgboost/core.py:158: UserWarning: [20:11:00] WARNING: /workspace/src/learner.cc:740: \n",
             "Parameters: { \"use_label_encoder\" } are not used.\n",
             "\n",
             "  warnings.warn(smsg, UserWarning)\n"
@@ -4378,10 +4402,54 @@
             "roc_auc: 0.6934\n",
             "precision@10%: 0.7818\n",
             "💾 Modelo XGBoost salvo em: /content/models/xgb_model_BTCUSD_15m.joblib\n",
-            "📂 Modelo LSTM encontrado em: /content/models/lstm_model_BTCUSD_15m.h5\n",
+            "📂 Modelo LSTM encontrado em: /content/models/lstm_model_BTCUSD_15m.h5\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.11/dist-packages/xgboost/core.py:158: UserWarning: [20:11:00] WARNING: /workspace/src/learner.cc:740: \n",
+            "Parameters: { \"use_label_encoder\" } are not used.\n",
+            "\n",
+            "  warnings.warn(smsg, UserWarning)\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
             "❌ Falha ao carregar modelo LSTM: Could not locate function 'mse'. Make sure custom classes are decorated with `@keras.saving.register_keras_serializable()`. Full object config: {'module': 'keras.metrics', 'class_name': 'function', 'config': 'mse', 'registered_name': 'mse'}\n",
             "🚀 Treinando LSTM para BTC-USD (15m)...\n",
             "🛠️ Features usadas para XGB_PRED: ['RSI', 'MACD', 'MACD_Signal', 'SMA_50', 'SMA_200', 'Bollinger_Upper', 'Bollinger_Lower', 'ADX', 'Stoch_K', 'Stoch_D', 'ATR', 'ROC', 'OBV', 'CCI', 'Tenkan_Sen', 'Kijun_Sen', 'VWAP', 'Doji', 'Engulfing', 'Hammer']\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "WARNING:absl:You are saving your model as an HDF5 file via `model.save()` or `keras.saving.save_model(model)`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')` or `keras.saving.save_model(model, 'my_model.keras')`. \n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "💾 Modelo LSTM salvo em: /content/models/lstm_model_BTCUSD_15m.h5\n",
+            "⚠️ Erro na previsão LSTM para 15m: ❌ Coluna 'XGB_PRED' ausente no dataframe.\n",
+            "⚠️ Erro ao ajustar com histórico: No columns to parse from file\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "unsupported format string passed to NoneType.__format__",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-69-dba520f64a0b>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m run_analysis(\n\u001b[0m\u001b[1;32m      2\u001b[0m     \u001b[0mselected_timeframes\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0;34m\"interval\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m\"15m\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"period\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m\"30d\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"atr\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;36m0.02\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mplot_timeframes\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"15m\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0malert_timeframes\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"15m\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m )\n",
+            "\u001b[0;32m<ipython-input-50-878645aecbcc>\u001b[0m in \u001b[0;36mrun_analysis\u001b[0;34m(selected_timeframes, plot_timeframes, alert_timeframes)\u001b[0m\n\u001b[1;32m   1405\u001b[0m             \u001b[0majuste\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0madjust_signal_based_on_history\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0masset\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minterval\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1406\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1407\u001b[0;31m             message = f\"\"\"\n\u001b[0m\u001b[1;32m   1408\u001b[0m \u001b[0;31m📢\u001b[0m \u001b[0;34m<\u001b[0m\u001b[0mb\u001b[0m\u001b[0;34m>\u001b[0m\u001b[0mSINAL\u001b[0m \u001b[0mDETECTADO\u001b[0m\u001b[0;34m<\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mb\u001b[0m\u001b[0;34m>\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1409\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mTypeError\u001b[0m: unsupported format string passed to NoneType.__format__"
           ]
         }
       ]
