--- a/Bot_Funcional_v51104.ipynb
+++ b/Bot_Funcional_v51104.ipynb
@@ -206,7 +206,7 @@
         "    print(f\"📦 Metadados salvos em: {meta_path}\")\n",
         "\n",
         "\n",
-        "def load_lstm_model(asset, interval, data=None, window_size=20):\n",
+        "def load_lstm_model(asset, interval, window_size=20):\n",
         "    from tensorflow.keras.models import load_model\n",
         "    import joblib\n",
         "\n",
@@ -224,26 +224,30 @@
         "        print(f\"❌ Erro ao carregar modelo LSTM de {model_path}: {e}\")\n",
         "        return None\n",
         "\n",
-        "    # ✅ Carrega os metadados salvos em .pkl\n",
+        "    # Carrega os metadados\n",
         "    if os.path.exists(meta_path):\n",
         "        try:\n",
         "            meta = joblib.load(meta_path)\n",
-        "            model.scaler = meta.get(\"scaler\")\n",
+        "            model.scaler_x = meta.get(\"scaler_x\")\n",
+        "            model.scaler_y = meta.get(\"scaler_y\")\n",
         "            model.feature_cols = meta.get(\"feature_cols\")\n",
         "            model.window_size = meta.get(\"window_size\", window_size)\n",
         "            print(f\"📦 Metadados carregados de: {meta_path}\")\n",
         "        except Exception as e:\n",
         "            print(f\"⚠️ Erro ao carregar metadados de {meta_path}: {e}\")\n",
-        "            model.scaler = None\n",
+        "            model.scaler_x = None\n",
+        "            model.scaler_y = None\n",
         "            model.feature_cols = None\n",
         "            model.window_size = window_size\n",
         "    else:\n",
         "        print(f\"⚠️ Metadados não encontrados em: {meta_path}\")\n",
-        "        model.scaler = None\n",
+        "        model.scaler_x = None\n",
+        "        model.scaler_y = None\n",
         "        model.feature_cols = None\n",
         "        model.window_size = window_size\n",
         "\n",
         "    return model\n",
+        "\n",
         "\n",
         "\n",
         "\n",
@@ -426,10 +430,13 @@
         "\n",
         "def get_lstm_feature_columns():\n",
         "    return [\n",
-        "        \"Close\",  # 🟢 Agora o modelo vai prever o preço de fechamento\n",
-        "        \"RSI\", \"MACD\", \"MACD_Signal\", \"SMA_50\", \"SMA_200\", \"Bollinger_Upper\",\n",
-        "        \"Bollinger_Lower\", \"ADX\", \"Stoch_K\", \"Stoch_D\", \"ATR\", \"ROC\", \"OBV\", \"CCI\",\n",
-        "        \"Tenkan_Sen\", \"Kijun_Sen\", \"VWAP\", \"Doji\", \"Engulfing\", \"Hammer\"\n",
+        "        \"Close\", \"High\", \"Low\",  # 🟢 Agora inclui as três colunas principais como features também\n",
+        "        \"RSI\", \"MACD\", \"MACD_Signal\", \"SMA_50\", \"SMA_200\",\n",
+        "        \"Bollinger_Upper\", \"Bollinger_Lower\",\n",
+        "        \"ADX\", \"Stoch_K\", \"Stoch_D\",\n",
+        "        \"ATR\", \"ROC\", \"OBV\", \"CCI\",\n",
+        "        \"Tenkan_Sen\", \"Kijun_Sen\", \"VWAP\",\n",
+        "        \"Doji\", \"Engulfing\", \"Hammer\"\n",
         "    ]\n",
         "\n",
         "\n",
@@ -437,7 +444,6 @@
         "    if feature_cols is None:\n",
         "        feature_cols = get_lstm_feature_columns()\n",
         "\n",
-        "    # Verifica se todas as colunas necessárias existem\n",
         "    missing_features = [col for col in feature_cols + target_cols if col not in data.columns]\n",
         "    if missing_features:\n",
         "        raise ValueError(f\"Colunas necessárias ausentes: {missing_features}\")\n",
@@ -446,20 +452,31 @@
         "    if len(df) < window_size + 1:\n",
         "        raise ValueError(\"Dados insuficientes para preparar dados LSTM.\")\n",
         "\n",
-        "    scaler = MinMaxScaler()\n",
-        "    scaled = scaler.fit_transform(df)\n",
+        "    # Escalonadores separados\n",
+        "    scaler_x = MinMaxScaler()\n",
+        "    scaler_y = MinMaxScaler()\n",
+        "\n",
+        "    df_features = df[feature_cols]\n",
+        "    df_targets = df[target_cols]\n",
+        "\n",
+        "    scaled_features = scaler_x.fit_transform(df_features)\n",
+        "    scaled_targets = scaler_y.fit_transform(df_targets)\n",
         "\n",
         "    X, y = [], []\n",
-        "    for i in range(window_size, len(scaled)):\n",
-        "        X.append(scaled[i - window_size:i, :len(feature_cols)])\n",
-        "        y.append(scaled[i, -len(target_cols):])  # últimas colunas: High, Low, Close\n",
+        "    for i in range(window_size, len(df)):\n",
+        "        X.append(scaled_features[i - window_size:i])\n",
+        "        y.append(scaled_targets[i])\n",
         "\n",
-        "    return np.array(X), np.array(y), scaler\n",
+        "    return np.array(X), np.array(y), scaler_x, scaler_y\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
         "\n",
         "\n",
         "def train_lstm_model(df, *, asset, interval, window_size=20, force_retrain=False):\n",
-        "    import numpy as np\n",
         "    import os\n",
+        "    import numpy as np\n",
         "    import joblib\n",
         "    from tensorflow.keras.models import Sequential\n",
         "    from tensorflow.keras.layers import LSTM, Dense\n",
@@ -467,47 +484,62 @@
         "    from sklearn.preprocessing import MinMaxScaler\n",
         "\n",
         "    feature_cols = get_lstm_feature_columns()\n",
-        "    df = df.dropna(subset=feature_cols + ['Close', 'High', 'Low'])\n",
+        "    target_cols = [\"High\", \"Low\", \"Close\"]\n",
+        "    df = df.dropna(subset=feature_cols + target_cols)\n",
         "\n",
         "    if len(df) <= window_size:\n",
         "        raise ValueError(\"Dados insuficientes para treino do LSTM.\")\n",
         "\n",
-        "    scaler = MinMaxScaler()\n",
-        "    scaled_data = scaler.fit_transform(df[feature_cols])\n",
+        "    # Pré-processamento e escalonamento com dois scalers\n",
+        "    df_features = df[feature_cols]\n",
+        "    df_targets = df[target_cols]\n",
+        "\n",
+        "    scaler_x = MinMaxScaler()\n",
+        "    scaler_y = MinMaxScaler()\n",
+        "\n",
+        "    scaled_features = scaler_x.fit_transform(df_features)\n",
+        "    scaled_targets = scaler_y.fit_transform(df_targets)\n",
+        "\n",
         "    X, y = [], []\n",
-        "\n",
         "    for i in range(window_size, len(df)):\n",
-        "        X.append(scaled_data[i - window_size:i])\n",
-        "        y.append(df[[\"Close\", \"High\", \"Low\"]].iloc[i].values)\n",
+        "        X.append(scaled_features[i - window_size:i])\n",
+        "        y.append(scaled_targets[i])\n",
         "\n",
-        "    X, y = np.array(X), np.array(y)\n",
+        "    X = np.array(X)\n",
+        "    y = np.array(y)\n",
+        "\n",
+        "    print(f\"✅ X.shape: {X.shape}, y.shape: {y.shape}\")\n",
+        "    print(f\"✅ Primeiros 3 alvos y:\\n{y[:3]}\")\n",
         "\n",
         "    model_path = get_model_path(asset, interval, model_type=\"lstm\")\n",
+        "    meta_path = model_path.replace(\".h5\", \"_meta.pkl\")\n",
         "\n",
         "    if not force_retrain and os.path.exists(model_path):\n",
         "        model = load_lstm_model(asset, interval)\n",
-        "        if model and hasattr(model, \"scaler\") and hasattr(model, \"feature_cols\") and hasattr(model, \"window_size\"):\n",
+        "        if model and all(hasattr(model, a) for a in [\"scaler_x\", \"scaler_y\", \"feature_cols\", \"window_size\"]):\n",
         "            return model\n",
         "        else:\n",
         "            print(\"⚠️ Modelo existente não contém atributos. Será refeito.\")\n",
         "\n",
+        "    # Construção e treino do modelo\n",
         "    model = Sequential()\n",
         "    model.add(LSTM(64, return_sequences=False, input_shape=(X.shape[1], X.shape[2])))\n",
-        "    model.add(Dense(3))  # Prever [Close, High, Low]\n",
+        "    model.add(Dense(3))  # Prever [High, Low, Close]\n",
         "    model.compile(optimizer='adam', loss='mse')\n",
         "\n",
         "    es = EarlyStopping(patience=10, restore_best_weights=True)\n",
         "    model.fit(X, y, epochs=100, batch_size=32, validation_split=0.2, callbacks=[es], verbose=0)\n",
         "\n",
-        "    # Atributos manuais\n",
-        "    model.scaler = scaler\n",
+        "    # Atributos manuais para reutilizar depois\n",
+        "    model.scaler_x = scaler_x\n",
+        "    model.scaler_y = scaler_y\n",
         "    model.feature_cols = feature_cols\n",
         "    model.window_size = window_size\n",
         "\n",
         "    model.save(model_path)\n",
-        "    meta_path = model_path.replace(\".h5\", \"_meta.pkl\")\n",
         "    joblib.dump({\n",
-        "        \"scaler\": scaler,\n",
+        "        \"scaler_x\": scaler_x,\n",
+        "        \"scaler_y\": scaler_y,\n",
         "        \"feature_cols\": feature_cols,\n",
         "        \"window_size\": window_size\n",
         "    }, meta_path)\n",
@@ -515,6 +547,12 @@
         "    print(f\"💾 Modelo LSTM salvo em: {model_path}\")\n",
         "    print(f\"📦 Metadados salvos em: {meta_path}\")\n",
         "    return model\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
         "\n",
         "\n",
         "def train_ml_model(data, asset=None, interval=None, verbose=False):\n",
@@ -623,31 +661,30 @@
         "\n",
         "\n",
         "def predict_with_lstm(model, df):\n",
-        "    import numpy as np\n",
+        "    if not all(hasattr(model, attr) for attr in ['scaler_x', 'scaler_y', 'feature_cols', 'window_size']):\n",
+        "        raise AttributeError(\"O modelo LSTM não possui os atributos necessários.\")\n",
         "\n",
-        "    if not hasattr(model, 'scaler') or not hasattr(model, 'feature_cols') or not hasattr(model, 'window_size'):\n",
-        "        raise AttributeError(\"O modelo LSTM não possui os atributos necessários (scaler, feature_cols, window_size).\")\n",
-        "\n",
-        "    feature_cols = model.feature_cols\n",
-        "    scaler = model.scaler\n",
-        "    window_size = model.window_size\n",
-        "\n",
-        "    df = df.copy()\n",
-        "    df = df.dropna(subset=feature_cols)\n",
-        "    if len(df) < window_size:\n",
+        "    df = df.copy().dropna(subset=model.feature_cols)\n",
+        "    if len(df) < model.window_size:\n",
         "        raise ValueError(\"Dados insuficientes para previsão com LSTM.\")\n",
         "\n",
-        "    last_window = df[feature_cols].values[-window_size:]\n",
-        "    scaled_window = scaler.transform(last_window)\n",
-        "    X_input = np.expand_dims(scaled_window, axis=0)  # shape (1, window_size, num_features)\n",
+        "    last_window = df[model.feature_cols].values[-model.window_size:]\n",
+        "    scaled_window = model.scaler_x.transform(last_window)\n",
+        "    X_input = np.expand_dims(scaled_window, axis=0)\n",
         "\n",
-        "    prediction = model.predict(X_input, verbose=0)[0]  # retorna [Close, High, Low]\n",
+        "    pred_scaled = model.predict(X_input, verbose=0)[0].reshape(1, -1)\n",
+        "    pred_descaled = model.scaler_y.inverse_transform(pred_scaled)[0]\n",
         "\n",
         "    return {\n",
-        "        \"Close\": float(prediction[0]),\n",
-        "        \"High\": float(prediction[1]),\n",
-        "        \"Low\": float(prediction[2])\n",
+        "        \"High\": float(pred_descaled[0]),\n",
+        "        \"Low\": float(pred_descaled[1]),\n",
+        "        \"Close\": float(pred_descaled[2])\n",
         "    }\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
         "\n",
         "\n",
         "\n",
@@ -706,6 +743,14 @@
         "    if not arquivos:\n",
         "        print(\"📂 Nenhum arquivo model_results_*.csv encontrado.\")\n",
         "        return\n",
+        "\n",
+        "def plot_entrada_lstm(df, feature_cols):\n",
+        "    import matplotlib.pyplot as plt\n",
+        "    df_plot = df[feature_cols].tail(100).copy()\n",
+        "    df_plot.plot(figsize=(12, 5), title=\"📊 Últimas 100 entradas das features LSTM\")\n",
+        "    plt.grid(True)\n",
+        "    plt.tight_layout()\n",
+        "    plt.show()\n",
         "\n",
         "\n",
         "def generate_explanation(row, prediction, feature_importance=None):\n",
@@ -1851,10 +1896,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mNs9WU77_fGw",
-        "outputId": "b35a92ec-95ea-4b51-db6c-4e6a1b2dc63b",
+        "outputId": "4efd0f97-b508-45ca-9105-9b888bdfa5c4",
         "collapsed": true
       },
-      "execution_count": 3,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
@@ -1881,8 +1926,8 @@
             "💾 Modelo XGBoost salvo em: /content/models/xgb_model_BTCUSD_15m.joblib\n",
             "📂 Modelo LSTM encontrado em: /content/models/lstm_model_BTCUSD_15m.h5\n",
             "📦 Metadados carregados de: /content/models/lstm_model_BTCUSD_15m_meta.pkl\n",
-            "🔍 Preço atual (15m): $84,524.88\n",
-            "🔮 Previsão LSTM: $346.27\n",
+            "🔍 Preço atual (15m): $84,744.88\n",
+            "🔮 Previsão LSTM: $348.04\n",
             "📈 Variação prevista: -99.59%\n",
             "⚠️ Arquivo inválido (sem colunas): prediction_log.csv\n",
             "⚠️ Ignorando leitura do prediction_log.csv pois está vazio ou ausente.\n",
@@ -1891,14 +1936,14 @@
             "⚠️ Arquivo inválido (sem colunas): /content/prediction_log.csv\n",
             "❌ Arquivo de simulação não encontrado.\n",
             "\n",
-            "📁 Resultados salvos em: model_results_2025-04-17_16-03-22.csv\n",
+            "📁 Resultados salvos em: model_results_2025-04-17_19-30-53.csv\n",
             "⚠️ Arquivo inválido (sem colunas): /content/prediction_log.csv\n",
             "🔄 Log de previsões criado em: /content/prediction_log.csv\n",
             "✅ Análise completa.\n",
             "\n",
             "🧪 Últimos sinais registrados no log:\n",
             "                      Date   Asset Timeframe     Price  Signal  LSTM_High_Predicted  LSTM_Low_Predicted  LSTM_Predicted      TP1      TP2       SL  TargetPrice  AdjustedProb\n",
-            "2025-04-17 16:03:22.258601 BTC-USD       15m 84524.875       0           344.720184          344.935059      346.268951 82834.38 81143.88 86215.37   346.268951           1.0\n"
+            "2025-04-17 19:30:53.266211 BTC-USD       15m 84744.875       0            347.22467          344.055237      348.042358 83049.98 81355.08 86439.77   348.042358           1.0\n"
           ]
         }
       ]
@@ -2071,6 +2116,17 @@
     {
       "cell_type": "code",
       "source": [
+        "criar_prediction_log_padrao(\"/content/prediction_log.csv\")\n"
+      ],
+      "metadata": {
+        "id": "h84-EYFPKgVi"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "clear_models(\"/content/models\")"
       ],
       "metadata": {
@@ -2078,9 +2134,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2baccc6e-584e-482e-b085-99aa53b05a1d"
+        "outputId": "efa2c74b-c19c-447d-a0a9-38319242bc5a"
       },
-      "execution_count": 75,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -2091,17 +2147,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "criar_prediction_log_padrao(\"/content/prediction_log.csv\")\n"
-      ],
-      "metadata": {
-        "id": "h84-EYFPKgVi"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -2123,9 +2168,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "773d8ffd-b9a0-4156-ad18-e3eadd5affac"
+        "outputId": "38d43f1a-f079-4edf-fc56-93b28ee6f48f"
       },
-      "execution_count": 76,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
@@ -2165,15 +2210,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d314367b-ad74-43ca-c5b7-4abdce304899"
+        "outputId": "59c4e165-a676-4d9b-bef1-9e8789161062"
       },
-      "execution_count": 77,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "🧹 Arquivo deletado: /content/model_results_2025-04-17_12-56-19.csv\n",
+            "🧹 Arquivo deletado: /content/model_results_2025-04-17_19-16-00.csv\n",
             "✅ Todos os arquivos model_results_*.csv foram removidos.\n"
           ]
         }
